--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Escan"></activity>
+        <activity android:name=".Tracker"></activity>
+        <activity android:name=".Escan" />
         <activity android:name=".Home" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
